--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gideon Selorm Ayivi</title>
+    <style>
+      body {
+        background-color: #000;
+        color: #fff;
+        font-family: sans-serif;
+        font-size: 1.5rem;
+        line-height: 1.5;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <main>
