Start Desktop view of Website

--- a/index.html
+++ b/index.html
@@ -5,67 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gideon Selorm Ayivi</title>
-    <style>
-      body {
-        background-color: #000;
-        color: #fff;
-        font-family: sans-serif;
-        font-size: 1.5rem;
-        line-height: 1.5;
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <div class="logo">SelormDev</div>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#Projects">Projects</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-      <h1>Gideon Selorm Ayivi</h1>
-
       <p>
-        Hello, I'm Gideon Selorm Ayivi, a software developer from Ghana. I'm
-        currently working on a project called <a href="#">Ghana Post GPS</a>.
-      </p>
-
-      <p>
-        I'm currently learning <a href="#">React</a> and
-        <a href="#">Node.js</a>.
-      </p>
-
-      <p>
-        I'm looking to collaborate on any project that will help me learn and
-        grow as a developer.
-      </p>
-
-      <p>
-        You can reach me on <a href="#">Twitter</a> or <a href="#">LinkedIn</a>.
-      </p>
-
-      <p>
-        I'm also available for hire. You can check out my
-        <a href="#">resume</a>.
+        Hello, I'm Gideon Selorm Ayivi, a student and an aspiring fullstack
+        developer from Ghana. I'm currently studying in Ghana Communication
+        Technology University.
+        <br />
+        <br />
+        I'm learning React and Node.js. I'm looking to collaborate on any
+        project that will help me learn and grow as a developer. You can reach
+        me on
+        <a href="https://twitter.com/SelormDev">Twitter</a> or
+        <a href="https://www.linkedin.com/in/selormdev/">LinkedIn</a>. I'm also
+        available for hire. You can check out my <a href="#">resume</a>.
 
         <br />
 
-        You can also check out my <a href="#">GitHub</a> and
-        <a href="#">CodePen</a> profiles.
+        You can also check out my
+        <a href="https://github.com/SelormDev">GitHub</a> profile.
       </p>
-
-      <p>
-        I'm also a <a href="#">YouTuber</a>. I make videos about programming and
-        tech.
-
-        <br />
-
-        I also have a <a href="#">blog</a> where I write about programming and
-        tech.
-      </p>
-
-      <p>
-        I'm also a <a href="#">freelancer</a>. I can help you build your next
-        project.
-      </p>
-
-      <p>I'm also a <a href="#">designer</a>. I design websites and apps.</p>
     </main>
   </body>
 </html>
