Add random bg image

--- a/index.html
+++ b/index.html
@@ -10,34 +10,42 @@
   <body>
     <header>
       <nav>
-        <div class="logo">SelormDev</div>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#Projects">Projects</a></li>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Contact">Contact</a></li>
+          <li><a href="#Home">Home</a></li>
+          <li><a href="#Projects">About</a></li>
+          <li><a href="#About">Resume</a></li>
+          <li><a href="#Contact">Portfolio</a></li>
         </ul>
+        <div class="logo"><a href="#Home">SelormDev</a></div>
       </nav>
     </header>
     <main>
-      <p>
-        Hello, I'm Gideon Selorm Ayivi, a student and an aspiring fullstack
-        developer from Ghana. I'm currently studying in Ghana Communication
-        Technology University.
-        <br />
-        <br />
-        I'm learning React and Node.js. I'm looking to collaborate on any
-        project that will help me learn and grow as a developer. You can reach
-        me on
-        <a href="https://twitter.com/SelormDev">Twitter</a> or
-        <a href="https://www.linkedin.com/in/selormdev/">LinkedIn</a>. I'm also
-        available for hire. You can check out my <a href="#">resume</a>.
+      <section id="Home">
+        <div class="name">
+          <h1>Gideon Selorm Ayivi</h1>
+          <h2>Fullstack Developer</h2>
+          <a href="#Contact">Contact Me</a>
+        </div>
+      </section>
 
-        <br />
-
-        You can also check out my
-        <a href="https://github.com/SelormDev">GitHub</a> profile.
-      </p>
+      <section id="About">
+        <p>
+          Hello, I'm Gideon Selorm Ayivi, a student and an aspiring fullstack
+          developer from Ghana. I'm currently studying in Ghana Communication
+          Technology University.
+          <br />
+          <br />
+          I'm learning React and Node.js. I'm looking to collaborate on any
+          project that will help me learn and grow as a developer. You can reach
+          me on
+          <a href="https://twitter.com/SelormDev">Twitter</a> or
+          <a href="https://www.linkedin.com/in/selormdev/">LinkedIn</a>. I'm
+          also available for hire. You can check out my <a href="#">resume</a>.
+          <br />
+          You can also check out my
+          <a href="https://github.com/SelormDev">GitHub</a> profile.
+        </p>
+      </section>
     </main>
   </body>
 </html>
