--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <nav>
         <ul>
           <li><a href="#Home">Home</a></li>
-          <li><a href="#Projects">About</a></li>
-          <li><a href="#About">Resume</a></li>
-          <li><a href="#Contact">Portfolio</a></li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Resume">Resume</a></li>
+          <li><a href="#Portfoli">Portfolio</a></li>
         </ul>
         <div class="logo"><a href="#Home">SelormDev</a></div>
       </nav>
