--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <ul>
           <li><a href="#Home">Home</a></li>
           <li><a href="#About">About</a></li>
-          <li><a href="#Resume">Resume</a></li>
+          <li>
+            <a
+              href="https://docs.google.com/document/d/13HvQWeqfkMZoeDd9npaSZc1HGxei1BzwyC5sZJP5YzY/edit?mode=html"
+              >Resume</a
+            >
+          </li>
           <li><a href="#Portfoli">Portfolio</a></li>
         </ul>
         <div class="logo"><a href="#Home">SelormDev</a></div>
