Create skeleton for nav and home page

--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
           <h2>Fullstack Developer</h2>
           <a href="#Contact">Contact Me</a>
         </div>
+        <div class="profile-pic">
+          <img
+            src="./images/profile-pic.jpg"
+            alt="My Avatar Pic"
+            class="avatar"
+          />
+        </div>
       </section>
 
       <section id="About">
