Changed navigation paths

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Landed by HTML5 UP</title>
+    <title>Gideon Selorm Ayivi</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -21,24 +21,15 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li>
-              <a href="#">Layouts</a>
+              <a href="#">Project Page</a>
               <ul>
-                <li><a href="left-sidebar.html">Left Sidebar</a></li>
-                <li><a href="right-sidebar.html">Right Sidebar</a></li>
-                <li><a href="no-sidebar.html">No Sidebar</a></li>
-                <li>
-                  <a href="#">Submenu</a>
-                  <ul>
-                    <li><a href="#">Option 1</a></li>
-                    <li><a href="#">Option 2</a></li>
-                    <li><a href="#">Option 3</a></li>
-                    <li><a href="#">Option 4</a></li>
-                  </ul>
-                </li>
+                <li><a href="frontend-mentor.html">Frontend Mentor</a></li>
+                <li><a href="self-made.html">Self Made Projects</a></li>
+                <li><a href="exercises.html">Exercise Projects</a></li>
               </ul>
             </li>
-            <li><a href="elements.html">Elements</a></li>
-            <li><a href="#" class="button primary">Sign Up</a></li>
+            <li><a href="elements.html">Portfolio</a></li>
+            <!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
           </ul>
         </nav>
       </header>
@@ -87,11 +78,11 @@
               </div>
               <div class="col-4 col-12-medium">
                 <p>
-                  Morbi enim nascetur et placerat lorem sed iaculis neque ante
-                  adipiscing adipiscing metus massa. Blandit orci porttitor
-                  semper. Arcu phasellus tortor enim mi mi nisi praesent
-                  adipiscing. Integer mi sed nascetur cep aliquet augue varius
-                  tempus. Feugiat lorem ipsum dolor nullam.
+                  For Morbi is born and invests the world, but not before the
+                  mass of the adipiscing adipiscing. The airline is always
+                  flattering. Arcu phasellus tortor for me mi mi if present
+                  adipiscing. My whole life, however, will be born in a
+                  different time. Don't worry about the internet.
                 </p>
               </div>
             </div>
@@ -107,14 +98,14 @@
         /></span>
         <div class="content">
           <header>
-            <h2>Interdum amet non magna accumsan</h2>
+            <h2>Sometimes it's not a big deal</h2>
             <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            Let the lorem eu and lorem amet and arcu phasellus tortor for me if
+            I do not present the adipiscing. Integer mi sed nacetur cep aliquet
+            auge varius tempus loborti porttitor lorem et accumsan consequat
+            adipiscing lorem.+
           </p>
           <ul class="actions">
             <li><a href="#" class="button">Learn More</a></li>
@@ -134,10 +125,10 @@
             <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
           </header>
           <p>
-            Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor
-            enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep
-            aliquet augue varius tempus lobortis porttitor lorem et accumsan
-            consequat adipiscing lorem.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ad
+            earum saepe dolor ducimus asperiores quaerat ratione sunt sed
+            sapiente, maxime repellendus eius consequuntur voluptate assumenda
+            temporibus dolorem cupiditate animi.
           </p>
           <ul class="actions">
             <li><a href="#" class="button">Learn More</a></li>
