--- a/index.html
+++ b/index.html
@@ -1,303 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./images/profile-pic-icon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Gideon Selorm Ayivi</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
   </head>
-  <body class="is-preload landing">
-    <div id="page-wrapper">
-      <!-- Header -->
-      <header id="header">
-        <h1 id="logo"><a href="index.html">SelormDev</a></h1>
-        <nav id="nav">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-              <a href="#">Project Page</a>
-              <ul>
-                <li><a href="frontend-mentor.html">Frontend Mentor</a></li>
-                <li><a href="self-made.html">Self Made Projects</a></li>
-                <li><a href="exercises.html">Exercise Projects</a></li>
-              </ul>
-            </li>
-            <li><a href="elements.html">Portfolio</a></li>
-            <!-- <li><a href="#" class="button primary">Sign Up</a></li> -->
-          </ul>
-        </nav>
-      </header>
-
-      <!-- Banner -->
-      <section id="banner">
-        <div class="content">
-          <header>
-            <h2>Gideon Selorm Ayivi</h2>
-            <p>
-              Student at Ghana Communication Technology <br />
-              University, studying Computer Science.
-            </p>
-          </header>
-          <span class="image"
-            ><img src="./assets/images/profile-pic.jpg" alt="My Avatar"
-          /></span>
-        </div>
-        <a href="#one" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- One -->
-      <section id="one" class="spotlight style1 bottom">
-        <span class="image fit main"
-          ><img src="images/pic02.jpg" alt=""
-        /></span>
-        <div class="content">
-          <div class="container">
-            <div class="row">
-              <div class="col-4 col-12-medium">
-                <header>
-                  <h2>Odio faucibus ipsum integer consequat</h2>
-                  <p>
-                    Nascetur eu nibh vestibulum amet gravida nascetur praesent
-                  </p>
-                </header>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-                  Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-                  nisi praesent dolor adipiscing. Integer mi sed nascetur cep
-                  aliquet augue varius tempus lobortis porttitor accumsan
-                  consequat adipiscing lorem dolor.
-                </p>
-              </div>
-              <div class="col-4 col-12-medium">
-                <p>
-                  For Morbi is born and invests the world, but not before the
-                  mass of the adipiscing adipiscing. The airline is always
-                  flattering. Arcu phasellus tortor for me mi mi if present
-                  adipiscing. My whole life, however, will be born in a
-                  different time. Don't worry about the internet.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <a href="#two" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Two -->
-      <section id="two" class="spotlight style2 right">
-        <span class="image fit main"
-          ><img src="images/pic03.jpg" alt=""
-        /></span>
-        <div class="content">
-          <header>
-            <h2>Sometimes it's not a big deal</h2>
-            <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
-          </header>
-          <p>
-            Let the lorem eu and lorem amet and arcu phasellus tortor for me if
-            I do not present the adipiscing. Integer mi sed nacetur cep aliquet
-            auge varius tempus loborti porttitor lorem et accumsan consequat
-            adipiscing lorem.+
-          </p>
-          <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
-          </ul>
-        </div>
-        <a href="#three" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Three -->
-      <section id="three" class="spotlight style3 left">
-        <span class="image fit main bottom"
-          ><img src="images/pic04.jpg" alt=""
-        /></span>
-        <div class="content">
-          <header>
-            <h2>Interdum felis blandit praesent sed augue</h2>
-            <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
-          </header>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum ad
-            earum saepe dolor ducimus asperiores quaerat ratione sunt sed
-            sapiente, maxime repellendus eius consequuntur voluptate assumenda
-            temporibus dolorem cupiditate animi.
-          </p>
-          <ul class="actions">
-            <li><a href="#" class="button">Learn More</a></li>
-          </ul>
-        </div>
-        <a href="#four" class="goto-next scrolly">Next</a>
-      </section>
-
-      <!-- Four -->
-      <section id="four" class="wrapper style1 special fade-up">
-        <div class="container">
-          <header class="major">
-            <h2>Accumsan sed tempus adipiscing blandit</h2>
-            <p>
-              Iaculis ac volutpat vis non enim gravida nisi faucibus posuere
-              arcu consequat
-            </p>
-          </header>
-          <div class="box alt">
-            <div class="row gtr-uniform">
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-chart-area"></span>
-                <h3>Ipsum sed commodo</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-comment"></span>
-                <h3>Eleifend lorem ornare</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-flask"></span>
-                <h3>Cubilia cep lobortis</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-paper-plane"></span>
-                <h3>Non semper interdum</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-file"></span>
-                <h3>Odio laoreet accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-              <section class="col-4 col-6-medium col-12-xsmall">
-                <span class="icon solid alt major fa-lock"></span>
-                <h3>Massa arcu accumsan</h3>
-                <p>
-                  Feugiat accumsan lorem eu ac lorem amet accumsan donec.
-                  Blandit orci porttitor.
-                </p>
-              </section>
-            </div>
-          </div>
-          <footer class="major">
-            <ul class="actions special">
-              <li><a href="#" class="button">Magna sed feugiat</a></li>
-            </ul>
-          </footer>
-        </div>
-      </section>
-
-      <!-- Five -->
-      <section id="five" class="wrapper style2 special fade">
-        <div class="container">
-          <header>
-            <h2>Contact Me</h2>
-            <p>
-              Want to get in touch? Send me a message and I will get back to you
-              as soon as possible!
-            </p>
-          </header>
-          <form method="post" action="#" class="cta">
-            <div class="row gtr-uniform gtr-50">
-              <div class="col-8 col-12-xsmall">
-                <input
-                  type="email"
-                  name="email"
-                  id="email"
-                  placeholder="selormayivi5@gmail.com"
-                />
-              </div>
-              <div class="col-4 col-12-xsmall">
-                <input type="submit" value="Get Started" class="fit primary" />
-              </div>
-            </div>
-          </form>
-        </div>
-      </section>
-
-      <!-- Footer -->
-      <footer id="footer">
-        <ul class="icons">
-          <li>
-            <a
-              href="https://twitter.com/SelormDev"
-              class="icon brands alt fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://web.facebook.com/SelormDev"
-              class="icon brands alt fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/selormdev/"
-              class="icon brands alt fa-linkedin-in"
-              ><span class="label">LinkedIn</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/selormdev/"
-              class="icon brands alt fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/SelormDev"
-              class="icon brands alt fa-github"
-              ><span class="label">GitHub</span></a
-            >
-          </li>
-          <li>
-            <a
-              href="mailto:selormayivi5@gmail.com"
-              class="icon solid alt fa-envelope"
-              ><span class="label">Email</span></a
-            >
-          </li>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>About</li>
+          <li>Work</li>
+          <li>contact</li>
         </ul>
-        <ul class="copyright">
-          <li>&copy; SelormDev. All rights reserved.</li>
-          <li>
-            Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>
-          </li>
+      </nav>
+    </header>
+    <main>
+      <section class="about">
+        <div class="name">
+          <h1>Gideon Selorm Ayivi</h1>
+          <h2>Web Developer</h2>
+        </div>
+        <p>
+          I am a web developer with a passion for creating beautiful and
+          functional websites. I am currently a student at the Ghana
+          Communication Technology University studying Computer Science. I am
+          also a self-taught web developer. I have experience in HTML, CSS and
+          JavaScript. I am currently learning React and Node.js. I am also
+          interested in cybersecurity and machine learning.
+        </p>
+      </section>
+      <!-- <section>
+        <h2>Skills</h2>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
         </ul>
-      </footer>
-    </div>
-
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+      </section> -->
+    </main>
   </body>
 </html>
