--- a/index.html
+++ b/index.html
@@ -9,37 +9,33 @@
   </head>
   <body>
     <header>
+      <!-- Nav Bar -->
       <nav>
         <ul>
-          <li>About</li>
-          <li>Work</li>
-          <li>contact</li>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Work">Work</a></li>
+          <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
+      <!-- About / Profile -->
       <section class="about">
         <div class="name">
           <h1>Gideon Selorm Ayivi</h1>
           <h2>Web Developer</h2>
         </div>
-        <p>
-          I am a web developer with a passion for creating beautiful and
-          functional websites. I am currently a student at the Ghana
-          Communication Technology University studying Computer Science. I am
-          also a self-taught web developer. I have experience in HTML, CSS and
-          JavaScript. I am currently learning React and Node.js. I am also
-          interested in cybersecurity and machine learning.
-        </p>
+        <div class="profile-pic">
+          <img
+            src="./images/profile-pic-icon.png"
+            alt="profile-pic"
+            class="profile-pic-img"
+          />
+        </div>
       </section>
-      <!-- <section>
-        <h2>Skills</h2>
-        <ul>
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-        </ul>
-      </section> -->
+      <p class="info">
+        Website under development. <br />Check back soon. <br />Thank you.
+      </p>
     </main>
   </body>
 </html>
