Removed test code

--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
   <body>
     <header>
       <!-- Nav Bar -->
-      <nav class="navbar" id="myNavBar">
-        <a href="#" class="icon" onclick="toggleNavbar()"> &#9776; </a>
-        <a href="#Home">Home</a>
-        <a href="#About">About</a>
-        <a href="#Work">Work</a>
-        <a href="#Contact">Contact</a>
-        <a href="./css/test.html"> Test </a>
+      <nav>
+        <ul>
+          <li><a href="#About">About</a></li>
+          <li><a href="#Work">Work</a></li>
+          <li><a href="#Contact">Contact</a></li>
+        </ul>
       </nav>
     </header>
     <main>
@@ -38,6 +37,5 @@
         Website under development. <br />Check back soon. <br />Thank you.
       </p>
     </main>
-    <script src="./js/script.js"></script>
   </body>
 </html>
