Placed info on website

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <body>
     <header>
       <!-- Nav Bar -->
-      <nav>
+      <!-- <nav>
         <ul>
           <li><a href="#About">About</a></li>
           <li><a href="#Work">Work</a></li>
           <li><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
-    </header>
+    </header> -->
     <main>
       <!-- About / Profile -->
-      <section class="about">
+      <!-- <section class="about">
         <div class="name">
           <h1>Gideon Selorm Ayivi</h1>
           <h2>Web Developer</h2>
@@ -31,8 +31,8 @@
             alt="profile-pic"
             class="profile-pic-img"
           />
-        </div>
-      </section>
+        </div> 
+      </section> -->
       <p class="info">
         Website under development. <br />Check back soon. <br />Thank you.
       </p>
