--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <div class="name">
           <h1>Gideon Selorm Ayivi</h1>
           <h2>Web Developer</h2>
-        </div>
+        </div> -->
         <div class="profile-pic">
           <img
             src="./images/profile-pic-icon.png"
             alt="profile-pic"
             class="profile-pic-img"
           />
-        </div> 
+       <!-- </div> 
       </section> -->
       <p class="info">
         Website under development. <br />Check back soon. <br />Thank you.
