--- a/index.html
+++ b/index.html
@@ -1,41 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./images/profile-pic-icon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Gideon Selorm Ayivi</title>
-  </head>
-  <body>
-    <header>
-      <!-- Nav Bar -->
-      <!-- <nav>
-        <ul>
-          <li><a href="#About">About</a></li>
-          <li><a href="#Work">Work</a></li>
-          <li><a href="#Contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header> -->
-    <main>
-      <!-- About / Profile -->
-      <!-- <section class="about">
-        <div class="name">
-          <h1>Gideon Selorm Ayivi</h1>
-          <h2>Web Developer</h2>
-        </div> -->
-        <div class="profile-pic">
-          <img
-            src="./images/profile-pic-icon.png"
-            alt="profile-pic"
-            class="profile-pic-img"
-          />
-       <!-- </div> 
-      </section> -->
-      <p class="info">
-        Website under development. <br />Check back soon. <br />Thank you.
-      </p>
-    </main>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="./images/profile-pic-icon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Gideon Selorm Ayivi</title>
+</head>
+
+<body>
+  <header class="navigation-bar">
+    <!-- Logo -->
+    <div class="logo">
+      Selorm<span class="dev">Dev</span>
+    </div>
+    <!-- Nav Bar -->
+    <nav>
+      <ul class="nav-list">
+        <li><a href="#About">About</a></li>
+        <li><a href="#Work">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+        <li><a href="#Blog">Blog</a></li>
+      </ul>
+    </nav>
+  </header>
+
+</body>
+
 </html>
