--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content />
     <meta name="author" content />
-    <title>Contact - SelormDev</title>
+    <title>Contact - Gideon Selorm Ayivi</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/images/profile-pic-icon.png" />
     <!-- Custom Google font-->
